k8s/frontend-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend  
  template:
    metadata:
      labels:
        app: frontend  
    spec:
      containers:
      - name: frontend
        image: karim2053/ranting-cars-frontend  
        ports:
        - containerPort: 3000  
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer  
  selector:
    app: frontend  
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 3000
